--- a/style.css
+++ b/style.css
@@ -2,10 +2,23 @@ header {
   height: 100px;
   width: auto;
   background-color: aqua;
+  color: white;
+  font-size: 15px;
 }
 
 main {
   height: 900px;
   width: auto;
   background-color: gray;
+}
+
+#icons {
+  font-size: 40px;
+}
+
+#icons > .icon-card {
+  width: 200px;
+  height: 100px;
+  border: 1px solid black;
+  background-color: white;
 }
