--- a/style.css
+++ b/style.css
@@ -1,15 +1,23 @@
-header {
+.logo {
   height: 100px;
-  width: auto;
-  background-color: aqua;
+  width: 100%;
+  background-color: white;
+  color: #29b1dd;
+  font-size: 50px;
+}
+
+.filter-box {
+  height: 100px;
+  width: 100%;
+  background-color: #29b1dd;
   color: white;
-  font-size: 15px;
+  font-size: 20px;
 }
 
 main {
   height: 900px;
   width: auto;
-  background-color: gray;
+  background-color: #dddddd;
 }
 
 #icons {
@@ -18,7 +26,12 @@ main {
 
 #icons > .icon-card {
   width: 200px;
-  height: 100px;
-  border: 1px solid black;
+  height: 150px;
+  border: 1px black;
   background-color: white;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 10px;
 }
